--- a/35.For Loop/index.html
+++ b/35.For Loop/index.html
@@ -31,6 +31,11 @@
     <ul>
         <li style="color:red">for ( ; ; ) { <br> console.log("Hello"); <br>}</li>
     </ul>
+    <h2>The window.print() Method</h2>
+
+<p>Click the button to print the current page.</p>
+
+<button onclick="window.print()">Print this page</button>
 </body>
 
 </html>
